# immich-my

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  PLAN.md  README.md
immy/: .dockerignore  DEDUP-REVIEW-TOOL.md  Dockerfile.immy  README.md  pyproject.toml
immy/deploy/n5/: README.md  compose.yaml  config.example.yml  run-batch.sh
immy/deploy/n5/backup/: README.md  mirror.env.example  nightly-mirror.sh
immy/scripts/: check_drift.py  overnight_promote.sh  process_all_local.sh  process_groupB.sh
immy/src/immy/: apple_photos.py  backfill_dates.py  bloat.py  captions.py  cli.py  clip.py  clustering.py  config.py  dates.py  derivatives.py  devices.py  dji.py  duplicates.py  exif.py  faces.py  filenames.py  geocode.py  hallucinations.py  heartbeat.py  immich.py  insta360.py  journal.py  match.py  notes.py  offline.py  paths.py  pg.py  process.py  promote.py  raw.py  repair.py  sidecar.py  snapshot.py  srt.py  srtgeo.py  state.py  tagsync.py  track.py  transcripts.py  video.py
immy/src/immy/asr/: __init__.py  base.py  mlx_backend.py  plan.py  registry.py  runner.py  types.py  whispercpp_backend.py
immy/src/immy/dedup/: __init__.py  engine.py  manifest.py  phash.py  review.py  signals.py
immy/src/immy/rules/: __init__.py  bloat_candidate.py  clock_drift.py  clock_drift_by_camera.py  dji_srt.py  export_date_trap.py  filename_date.py  geocode_place.py  geotag_from_gpx.py  insta360.py  (+8 more)
immy/tests/: conftest.py  test_apple_photos.py  test_asr_runner.py  test_backfill_dates.py  test_bloat.py  test_bloat_sample.py  test_bloat_transcode.py  test_captions.py  test_clip.py  test_clip_immich_ml.py  test_clip_onnx.py  test_clustering.py  test_config_ml.py  test_dates.py  test_dedup.py  test_dedup_review.py  test_derivatives.py  test_derivatives_optional.py  test_devices.py  test_dji.py  test_duplicates.py  test_faces.py  test_geocode.py  test_geotag.py  test_immich.py  test_immich_ssh.py  test_insta360.py  test_journal.py  test_makernote.py  test_match.py  test_notes_body.py  test_offline.py  test_paths.py  test_process.py  test_promote.py  test_raw_pair.py  test_reembed.py  test_repair.py  test_smoke.py  test_snapshot.py  (+9 more)
(+38 files in other folders)
