[project]
name = "immy"
version = "0.0.1"
description = "Pre-ingest metadata forensics for trip folders bound for Immich."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyexiftool>=0.5",
    "pyyaml>=6.0",
    "rich>=13.7",
    "timezonefinder>=6.5",
    "psycopg[binary]>=3.2",
    "pyvips>=2.2",
    "numpy>=1.26",
    "mlx-clip @ git+https://github.com/harperreed/mlx_clip.git@f56e3ecc72c74c68b6b50eb6f50c3f22fc23fe2c ; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "onnxruntime>=1.18",
    "insightface>=0.7.3",
    "opencv-python-headless>=4.9",
    "pyobjc-framework-Vision>=10.0 ; sys_platform == 'darwin'",
    "mlx-whisper>=0.4 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
immy = "immy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/immy"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-n auto` → pytest-xdist spawns one worker per CPU core (14 on M3 Max).
# Each test runs in its own subprocess, so MLX / ONNX / mlx-whisper
# import costs pay in parallel instead of serially. pytest-sugar takes
# over the terminal formatter automatically when installed.
addopts = "-n auto"
